--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,18 +30,18 @@
         </div>
        </a>
        <!-- Nav Items -->
-        <ul class="nav-itens">
-          <li class="nav-item"><a href="index.html" class="nav-link"></a>Home</li>
+        <ul class="nav-items">
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 
-          <li class="nav-item"><a href="index.html" class="nav-link"></a>Home</li>
+          <li class="nav-item"><a href="clients.html" class="nav-link">Clients</a></li>
 
-          <li class="nav-item"><a href="index.html" class="nav-link"></a>Home</li>
+          <li class="nav-item"><a href="products.html" class="nav-link">Products</a></li>
 
-          <li class="nav-item"><a href="index.html" class="nav-link"></a>Home</li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 
-          <li class="nav-item"><a href="index.html" class="nav-link"></a>Home</li>
+          <li class="nav-item"><a href="account.html" class="nav-link">Account</a></li>
 
-          <li class="nav-item"><a href="index.html" class="nav-link"></a>Home</li>
+          <li class="nav-item"><a href="pricing.html" class="nav-btn">Pricing</a></li>
         </ul>
      </nav>
     <!-- Header -->
