Creating html and styling first navigation drop down

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -31,7 +31,132 @@
        </a>
        <!-- Nav Items -->
         <ul class="nav-items">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Home</a>
+          <!-- Dropdown 1 -->
+           <div class="dropdown dropdown-1">
+            <div class="dropdown-1-left">
+              <h3>Features</h3>
+              <div class="features-list">
+                <div class="features-list-item">
+                  <i class="fa-solid fa-star"></i>
+                  <span>All Features</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-boxes-stacked"></i>
+                  <span>100+ Elements</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-file"></i>
+                  <span>1000+ Layouts</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-pen-nib"></i>
+                  <span>No-code Design</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-wrench"></i>
+                  <span>Theme builder</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <span>Ecommerence</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-network-wired"></i>
+                  <span>Workflow</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-lightbulb"></i>
+                  <span>Marketing</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-code"></i>
+                  <span>Developers</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-desktop"></i>
+                  <span>Site Examples</span>
+                </div>
+
+                <div class="features-list-item">
+                  <i class="fa-solid fa-gears"></i>
+                  <span>Integrations</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="dropdown-1-right">
+              <h3>Services</h3>
+              <div class="dropdown-services">
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-wrench"></i>
+                  <div class="dropdown-service-item">
+                    <span>Theme Builder</span>
+                    <span>The #1 Theme Builder</span>
+                  </div>
+                </div>
+
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-lightbulb"></i>
+                  <div class="dropdown-service-item">
+                    <span>Marketplace</span>
+                    <span>Modules, Layouts, Themes</span>
+                  </div>
+                </div>
+
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-cloud"></i>
+                  <div class="dropdown-service-item">
+                    <span>Cloud</span>
+                    <span>Cloud Storage for Designers</span>
+                  </div>
+                </div>
+
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-brain"></i>
+                  <div class="dropdown-service-item">
+                    <span>AI</span>
+                    <span>Build Websites with AI</span>
+                  </div>
+                </div>
+
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-people-group"></i>
+                  <div class="dropdown-service-item">
+                    <span>Teams</span>
+                    <span>Collaboration for agencies</span>
+                  </div>
+                </div>
+
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-globe"></i>
+                  <div class="dropdown-service-item">
+                    <span>Hosting</span>
+                    <span>Fast Hosting of the Websites</span>
+                  </div>
+                </div>
+
+                <div class="dropdown-service">
+                  <i class="fa-solid fa-crown"></i>
+                  <div class="dropdown-service-item">
+                    <span>VIP</span>
+                    <span>24/7 Support & Discounts</span>
+                  </div>
+                </div>
+              </div>
+              <button type="button">Join Today</button>
+            </div>
+           </div>
+          </li>
 
           <li class="nav-item"><a href="clients.html" class="nav-link">Clients</a></li>
 
