Creating html and styling the third  navigation drop down

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -158,7 +158,34 @@
            </div>
           </li>
 
-          <li class="nav-item"><a href="clients.html" class="nav-link">Clients</a></li>
+          <li class="nav-item"><a href="clients.html" class="nav-link">Clients</a>
+          <!-- Dropdown 2 -->
+           <div class="dropdown dropdown-2">
+            <div class="clients-item">
+            <i class="fa-regular fa-envelope"></i>
+            <h3>Web Design Agencies</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid, assumenda maiores obcaecati placeat veritatis.</p>
+           </div>
+
+           <div class="clients-item">
+            <i class="fa-solid fa-earth-americas"></i>
+            <h3>Online Store Owners</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid, assumenda maiores obcaecati placeat veritatis.</p>
+           </div>
+
+           <div class="clients-item">
+            <i class="fa-brands fa-sketch"></i>
+            <h3>Web Design Freelancers</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid, assumenda maiores obcaecati placeat veritatis.</p>
+           </div>
+
+           <div class="clients-item">
+            <i class="fa-solid fa-store"></i>
+            <h3>Small Business Owners</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aliquid, assumenda maiores obcaecati placeat veritatis.</p>
+           </div>
+          </div>
+          </li>
 
           <li class="nav-item"><a href="products.html" class="nav-link">Products</a></li>
 
