Creating html and styling the third  navigation drop down

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -187,7 +187,53 @@
           </div>
           </li>
 
-          <li class="nav-item"><a href="products.html" class="nav-link">Products</a></li>
+          <li class="nav-item"><a href="products.html" class="nav-link">Products</a>
+          <!-- Dropdown 3 -->
+           <div class="dropdown dropdown-3">
+            <div class="products">
+              <div class="product">
+                <i class="fa-solid fa-wrench"></i>
+                <div>
+                  <span>Theme & Page Builder</span>
+                  <span>The #1 Theme and Visual Page</span>
+                </div>
+              </div>
+
+              <div class="product">
+                <i class="fa-solid fa-file"></i>
+                <div>
+                  <span>Page Builder Plugin</span>
+                  <span>Themes and Layouts</span>
+                </div>
+              </div>
+
+              <div class="product">
+                <i class="fa-solid fa-book-open"></i>
+                <div>
+                  <span>Extra Magazine Theme</span>
+                  <span>The Best Theme for Blogger</span>
+                </div>
+              </div>
+
+              <div class="product">
+                <i class="fa-solid fa-envelope"></i>
+                <div>
+                  <span>Bloom Email Opt-ins</span>
+                  <span>The Ultimate Email Opt-in</span>
+                </div>
+              </div>
+
+              <div class="product">
+                <i class="fa-solid fa-hashtag"></i>
+                <div>
+                  <span>Social Sharing</span>
+                  <span>Promote Social Sharing</span>
+                </div>
+              </div>
+            </div>
+            <button type="button">Join to Download</button>
+           </div>
+          </li>
 
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 
