Creating html and styling the fourth navigation dropdown

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -235,7 +235,43 @@
            </div>
           </li>
 
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a>
+            <!-- Dropdown 4 -->
+             <div class="dropdown dropdown-4">
+              <div class="contact-options">
+                <div>
+                  <i class="fa-solid fa-envelope"></i>
+                  <span>Get in Touch</span>
+                </div>
+
+                <div>
+                  <i class="fa-solid fa-comments"></i>
+                  <span>Chat with Sales</span>
+                </div>
+
+                <div>
+                  <i class="fa-solid fa-user"></i>
+                  <span>Accounts & Bills</span>
+                </div>
+
+                <div>
+                  <i class="fa-solid fa-wrench"></i>
+                  <span>Technical Support</span>
+                </div>
+
+                <div>
+                  <i class="fa-solid fa-people-group"></i>
+                  <span>Ask the Community</span>
+                </div>
+
+                <div>
+                  <i class="fa-solid fa-file-lines"></i>
+                  <span>Documentation</span>
+                </div>
+
+              </div>
+             </div>
+          </li>
 
           <li class="nav-item"><a href="account.html" class="nav-link">Account</a></li>
 
