--- a/HTML/index.html
+++ b/HTML/index.html
@@ -273,7 +273,23 @@
              </div>
           </li>
 
-          <li class="nav-item"><a href="account.html" class="nav-link">Account</a></li>
+          <li class="nav-item"><a href="account.html" class="nav-link">Account</a>
+          <!-- Dropdown 5 -->
+           <div class="dropdown dropdown-5">
+            <form class="account-form">
+              <div class="account-input-group">
+                <input type="text" placeholder="Username">
+                <input type="text" placeholder="Password">
+              </div>
+              <div class="check">
+                <input type="checkbox" id="check">
+                <label for="check">Remember Me</label>
+              </div>
+              <button type="button">Member Login</button>
+              <p>Forgot Your <span>Username</span> or <span>Password?</span></p>
+            </form>
+           </div>
+          </li>
 
           <li class="nav-item"><a href="pricing.html" class="nav-btn">Pricing</a></li>
         </ul>
