creating html for services section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -312,6 +312,71 @@
         <div class="bg-2"></div>
        </div>
      </header>
+
+     <!-- Services -->
+     <section class="services">
+      <div class="services-wrapper">
+        <h1>What We Offer</h1>
+        <div class="services-list">
+          <div class="service">
+            <i class="fa-solid fa-laptop"></i>
+            <h3>Website Creation</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-solid fa-arrows-to-circle"></i>
+            <h3>Content Management</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-brands fa-blogger-b"></i>
+            <h3>Blogging</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-solid fa-globe"></i>
+            <h3>E-commerence</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-brands fa-searchengin"></i>
+            <h3>SEO</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-solid fa-user"></i>
+            <h3>User Management</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-solid fa-ticket"></i>
+            <h3>Multilingual Support</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-solid fa-hashtag"></i>
+            <h3>Social Media Integration</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+
+          <div class="service">
+            <i class="fa-brands fa-rocketchat"></i>
+            <h3>Website Creation</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+          </div>
+        </div>
+      </div>
+      <div class="services-bg-1"></div>
+      <div class="services-bg-2"></div>
+     </section>
+
    </div>
 <script src="../JS/script.js"></script>
 </body>
