creating html for projects and styling header and filter navigation

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -369,15 +369,131 @@
           <div class="service">
             <i class="fa-brands fa-rocketchat"></i>
             <h3>Website Creation</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem dolores est fugit nesciunt deleniti qui soluta quam veritatis voluptate? Iusto.</p>]
           </div>
         </div>
       </div>
       <div class="services-bg-1"></div>
       <div class="services-bg-2"></div>
      </section>
+     <!-- Projects -->
+      <section class="projects">
+        <h1>100+ Full Website Packs</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe soluta obcaecati similique! Expedita dolore nobis ipsa veritatis commodi maxime, sed recusandae quia animi consequatur quas amet eum? Voluptate, libero cum.</p>
 
-   </div>
-<script src="../JS/script.js"></script>
-</body>
+        <div class="filter-nav">
+          <a href="#" class="filter-nav-link" data-type="business">Business</a>
+
+          <a href="#" class="filter-nav-link" data-type="food">Food</a>
+
+          <a href="#" class="filter-nav-link" data-type="health">Health</a>
+
+          <a href="#" class="filter-nav-link" data-type="travel">Travel</a>
+
+          <a href="#" class="filter-nav-link" data-type="other">Other</a>
+
+          <a href="#" class="filter-nav-link active" data-type="all">View All</a>
+
+        </div>
+        <div class="project-list">
+          <div class="project" data-type="business">
+            <img src="../images/web1-img1.png" alt="project-business">
+
+            <img src="../images/web1-img2.png" alt="project-business">
+
+            <img src="../images/web1-img3.png" alt="project-business">
+          </div>
+
+          <div class="project" data-type="other">
+            <img src="../images/web2-img1.png" alt="project-other">
+
+            <img src="../images/web2-img2.png" alt="project-other">
+
+            <img src="../images/web2-img3.png" alt="project-other">
+          </div>
+
+          <div class="project" data-type="food">
+            <img src="../images/web3-img1.png" alt="project-food">
+
+            <img src="../images/web3-img2.png" alt="project-food">
+
+            <img src="../images/web3-img3.png" alt="project-food">
+          </div>
+
+          <div class="project" data-type="health">
+            <img src="../images/web4-img1.png" alt="project-health">
+
+            <img src="../images/web4-img2.png" alt="project-health">
+
+            <img src="../images/web4-img3.png" alt="project-health">
+          </div>
+
+          <div class="project" data-type="other">
+            <img src="../images/web5-img1.png" alt="project-other">
+
+            <img src="../images/web5-img2.png" alt="project-other">
+
+            <img src="../images/web5-img3.png" alt="project-other">
+          </div>
+
+          <div class="project" data-type="health">
+            <img src="../images/web6-img1.png" alt="project-health">
+
+            <img src="../images/web6-img2.png" alt="project-health">
+
+            <img src="../images/web6-img3.png" alt="project-health">
+          </div>
+
+          <div class="project" data-type="travel">
+            <img src="../images/web7-img1.png" alt="project-travel">
+
+            <img src="../images/web7-img2.png" alt="project-travel">
+
+            <img src="../images/web7-img3.png" alt="project-travel">
+          </div>
+
+          <div class="project" data-type="travel">
+            <img src="../images/web8-img1.png" alt="project-travel">
+
+            <img src="../images/web8-img2.png" alt="project-travel">
+
+            <img src="../images/web8-img3.png" alt="project-travel">
+          </div>
+
+          <div class="project" data-type="food">
+            <img src="../images/web9-img1.png" alt="project-food">
+
+            <img src="../images/web9-img2.png" alt="project-food">
+
+            <img src="../images/web9-img3.png" alt="project-food">
+          </div>
+
+          <div class="project" data-type="business">
+            <img src="../images/web10-img1.png" alt="project-business">
+
+            <img src="../images/web10-img2.png" alt="project-business">
+
+            <img src="../images/web10-img3.png" alt="project-business">
+          </div>
+
+          <div class="project" data-type="food">
+            <img src="../images/web11-img1.png" alt="project-food">
+
+            <img src="../images/web11-img2.png" alt="project-food">
+
+            <img src="../images/web11-img3.png" alt="project-food">
+          </div>
+
+          <div class="project" data-type="business">
+            <img src="../images/web12-img1.png" alt="project-business">
+
+            <img src="../images/web12-img2.png" alt="project-business">
+
+            <img src="../images/web12-img3.png" alt="project-business">
+          </div>
+        </div>
+      </section>
+    </div>
+    <script src="../JS/script.js"></script>
+  </body>
 </html>
