--- a/HTML/index.html
+++ b/HTML/index.html
@@ -473,6 +473,68 @@
           </button>
         </div>
       </div>
+
+      <!-- Video -->
+      <div class="video-container show-controls">
+        <div class="video">
+          <div class="x-btn">
+            <i class="fa-solid fa-xmark"></i>
+          </div>
+          <div class="controls-wrapper">
+            <div class="video-timeline">
+              <div class="progress-area">
+                <span>00:00</span>
+                <div class="progress-bar"></div>
+              </div>
+            </div>
+            <div class="video-controls">
+              <div class="options left">
+                <button class="volume">
+                  <i class="fa-solid fa-volume-high"></i>
+                </button>
+                <input type="range" min="0" max="1" step="any" />
+                <div class="video-timer">
+                  <span class="current-time">00:00</span>
+                  <span class="separator"> / </span>
+                  <span class="video-duration">00:00</span>
+                </div>
+              </div>
+              <div class="options center">
+                <button class="skip-backward">
+                  <i class="fas fa-backward"></i>
+                </button>
+                <button class="play-pause">
+                  <i class="fas fa-play"></i>
+                </button>
+                <button class="skip-forward">
+                  <i class="fas fa-forward"></i>
+                </button>
+              </div>
+              <div class="options right">
+                <div class="playback-content">
+                  <button class="playback-speed">
+                    <span class="material-symbols-rounded"> slow_motion_video </span>
+                  </button>
+                  <div class="speed-options">
+                    <div data-speed="2">2x</div>
+                    <div data-speed="1.5">1.5x</div>
+                    <div data-speed="1" class="active-option">Normal</div>
+                    <div data-speed="0.75">0.75x</div>
+                    <div data-speed="0.5">0.5x</div>
+                  </div>
+                </div>
+                <button class="pic-in-pic">
+                  <span class="material-symbols-rounded"> picture_in_picture </span>
+                </button>
+                <button class="fullscreen">
+                  <i class="fa-solid fa-expand"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <video src="../videos/video.mp4"></video>
+        </div>
+      </div>
     </section>
 
     </div>
