subscribe section html/styling

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -537,6 +537,24 @@
       </div>
     </section>
 
+    <!-- Subscribe -->
+     <section class="subscribe">
+      <div class="subscribe-wrapper">
+        <div class="subscribe-icon">
+          <span class="material-symbols-rounded">
+            mark_as_unread
+          </span>
+        </div>
+        <h1>Subscribe Now!</h1>
+        <p>Enter your email to recieve updates</p>
+        <div class="subscribe-input-group">
+          <input type="email" placeholder="Your Email">
+          <button type="button">Subscribe</button>
+        </div>
+        <div class="subscribe-shadow"></div>
+      </div>
+     </section>
+
     </div>
     <script src="../JS/script.js"></script>
   </body>
