--- a/HTML/index.html
+++ b/HTML/index.html
@@ -555,6 +555,57 @@
       </div>
      </section>
 
+     <!-- Footer -->
+     <footer>
+      <div class="footer-content">
+        <div class="footer-top">
+          <div class="footer-social-media footer-item">
+            <h3>Follow Us</h3>
+            <div class="icons">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-pinterest-p"></i>
+              <i class="fa-brands fa-dribbble"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="footer-item">
+            <h3>Features</h3>
+            <a href="#">1000+ Layouts</a>
+            <a href="#">100+ Elements</a>
+            <a href="#">No-code Design</a>
+            <a href="#">E-commerce</a>
+            <a href="#">Workflow</a>
+            <a href="#">Marketing</a>
+          </div>
+          <div class="footer-item">
+            <h3>Services</h3>
+            <a href="#">Marketplace</a>
+            <a href="#">Theme Builder</a>
+            <a href="#">Cloud</a>
+            <a href="#">AI</a>
+            <a href="#">Teams</a>
+          </div>
+          <div class="footer-item">
+            <h3>Company</h3>
+            <a href="#">About Us</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <a href="index.html">Home</a>
+          <a href="clients.html">Clients</a>
+          <a href="products.html">Products</a>
+          <a href="contact.html">Contact</a>
+          <a href="account.html">Account</a>
+          <a href="pricing.html">Pricing</a>
+        </div>
+      </div>
+    </footer>
     </div>
     <script src="../JS/script.js"></script>
   </body>
