--- a/HTML/clients.html
+++ b/HTML/clients.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Website</title>
   <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="stylesheet" href="../CSS/clients.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +15,7 @@
   />
   <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0"
   />
 </head>
 <body>
@@ -579,6 +580,58 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="footer-content">
+        <div class="footer-top">
+          <div class="footer-social-media footer-item">
+            <h3>Follow Us</h3>
+            <div class="icons">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-pinterest-p"></i>
+              <i class="fa-brands fa-dribbble"></i>
+              <i class="fa-brands fa-youtube"></i>
+            </div>
+          </div>
+          <div class="footer-item">
+            <h3>Features</h3>
+            <a href="#">1000+ Layouts</a>
+            <a href="#">100+ Elements</a>
+            <a href="#">No-code Design</a>
+            <a href="#">E-commerce</a>
+            <a href="#">Workflow</a>
+            <a href="#">Marketing</a>
+          </div>
+          <div class="footer-item">
+            <h3>Services</h3>
+            <a href="#">Marketplace</a>
+            <a href="#">Theme Builder</a>
+            <a href="#">Cloud</a>
+            <a href="#">AI</a>
+            <a href="#">Teams</a>
+          </div>
+          <div class="footer-item">
+            <h3>Company</h3>
+            <a href="#">About Us</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <a href="index.html">Home</a>
+          <a href="clients.html">Clients</a>
+          <a href="products.html">Products</a>
+          <a href="contact.html">Contact</a>
+          <a href="account.html">Account</a>
+          <a href="pricing.html">Pricing</a>
+        </div>
+      </div>
+    </footer>
 
     </div>
     <script src="../JS/script.js"></script>
