styling products promo section

--- a/HTML/products.html
+++ b/HTML/products.html
@@ -339,7 +339,7 @@
       </section>
 
     <!-- Footer -->
-    <footer hidden>
+    <footer>
       <div class="footer-content">
         <div class="footer-top">
           <div class="footer-social-media footer-item">
@@ -391,6 +391,7 @@
     </footer>
 
     </div>
+    <script src="../JS/products.js"></script>
     <script src="../JS/script.js"></script>
   </body>
 </html>
