styling contact page

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -323,7 +323,7 @@
             <span class="material-symbols-rounded">construction</span>
             <h4>Technical Support</h4>
             <p>If you need help, you can chat directly with our support team</p>
-            <button type="button">Chat with Support</button>
+            <button type="button" class="chat-btn">Chat with Support</button>
             <div class="support-list">
               <button type="button" class="support-list-button">Ask the Community</button>
               <button type="button" class="support-list-button">Browse Documentation</button>
@@ -336,7 +336,7 @@
     </section>
 
     <!-- Footer -->
-    <footer hidden>
+    <footer>
       <div class="footer-content">
         <div class="footer-top">
           <div class="footer-social-media footer-item">
