styling pricing cards in pricing page

--- a/HTML/pricing.html
+++ b/HTML/pricing.html
@@ -403,7 +403,7 @@
         </div>
       </section>
       <!-- Footer -->
-      <footer hidden>
+      <footer>
         <div class="footer-content">
           <div class="footer-top">
             <div class="footer-social-media footer-item">
